(lang dune 3.20)

(name bast)

(generate_opam_files true)

(source
 (github de-alchmst/bast))

(authors "Đe-Alchmst <PolakJ_37@proton.me>")

(maintainers "Đe-Alchmst <PolakJ_37@proton.me>")

(license "BSD 3-Clause")

(documentation https://url/to/documentation)

(package
 (name bast)
 (synopsis "The BAST programming language")
 (description "The BAST programming language")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
